<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/city_menu_tours_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/city_menu_background_color_for_active_buttons"
            android:clickable="true"
            android:text="@string/button_tours_text"
            android:textColor="@color/text_color_active_button"
            app:icon="@drawable/baseline_tsunami_24"
            app:iconTint="@color/text_color_active_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/city_menu_hotels_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/city_menu_background_color_for_inactive_buttons"
            android:clickable="true"
            android:text="@string/button_hotels_text"
            android:textColor="@color/text_color_inactive_button"
            app:icon="@drawable/baseline_hotel_24"
            app:iconTint="@color/inactive_text_color"
            app:layout_constraintBottom_toBottomOf="@id/city_menu_tours_button"
            app:layout_constraintStart_toEndOf="@id/city_menu_tours_button"
            app:layout_constraintTop_toTopOf="@id/city_menu_tours_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/city_menu_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/city_menu_background_color_for_inactive_buttons"
            android:clickable="true"
            android:text="@string/city_menu_cancel_button_text"
            android:textColor="#1E88E5"
            app:layout_constraintBottom_toBottomOf="@id/city_menu_tours_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city_menu_tours_button" />


        <AutoCompleteTextView
            android:id="@+id/city_menu_autocomplete_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:completionThreshold="1"
            android:dropDownHeight="200dp"
            android:hint="Введите город"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@id/city_menu_clear_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_menu_tours_button"

            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/city_menu_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/baseline_highlight_off_24"
            android:tint="@color/text_color_active_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city_menu_autocomplete_tv"
            app:layout_constraintTop_toTopOf="@id/city_menu_autocomplete_tv"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
































